// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rollup-rewriter should error on unsupported formats ("cjs") 1`] = `"Unsupported format: cjs. Supported formats are [\\"amd\\",\\"es\\",\\"esm\\",\\"system\\"]"`;

exports[`rollup-rewriter should include css for static imports used by a dynamic import ("amd") 1`] = `
Object {
  "assets/dynamic1.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/dynamic1.css */
.dynamic1 {
    color: dynamic1;
}
",
  "assets/entry1.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/entry1.css */
.entry1 {
    color: entry1;
}
",
  "assets/entry2.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/entry2.css */
.entry2 {
    color: entry2;
}
",
  "assets/static1.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/static1.css */
.static1 {
    color: static1;
}
",
  "dynamic1.js": "
define(['exports', './static1'], function (exports, static1) { 'use strict';

    var css = {
        \\"dynamic1\\": \\"dynamic1\\"
    };

    console.log(static1.static1, css);

    var dynamic1 = \\"dynamic1.js\\";

    exports.default = dynamic1;

});
",
  "entry1.js": "
define(['./static1'], function (static1) { 'use strict';

    var css = {
        \\"entry1\\": \\"entry1\\"
    };

    console.log(static1.static1, css);

});
",
  "entry2.js": "
define(['require'], function (require) { 'use strict';

    var css = {
        \\"entry2\\": \\"entry2\\"
    };

    console.log(css);

    (function() {
        new Promise(function (resolve, reject) { Promise.all([
    lazyload(\\"./assets/static1.css\\"),
lazyload(\\"./assets/dynamic1.css\\"),
    new Promise(function (resolve, reject) { require(['./dynamic1'], resolve, reject) })
])
.then((results) => resolve(results[results.length - 1]))
.catch(reject) }).then(console.log);
    }());

});
",
  "static1.js": "
define(['exports'], function (exports) { 'use strict';

    var css = {
        \\"static1\\": \\"static1\\"
    };

    console.log(css);

    var static1 = \\"static1.js\\";

    exports.static1 = static1;

});
",
}
`;

exports[`rollup-rewriter should include css for static imports used by a dynamic import ("es") 1`] = `
Object {
  "assets/dynamic1.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/dynamic1.css */
.dynamic1 {
    color: dynamic1;
}
",
  "assets/entry1.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/entry1.css */
.entry1 {
    color: entry1;
}
",
  "assets/entry2.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/entry2.css */
.entry2 {
    color: entry2;
}
",
  "assets/static1.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/static1.css */
.static1 {
    color: static1;
}
",
  "dynamic1.js": "
import { s as static1 } from './static1.js';

var css = {
    \\"dynamic1\\": \\"dynamic1\\"
};

console.log(static1, css);

var dynamic1 = \\"dynamic1.js\\";

export default dynamic1;
",
  "entry1.js": "
import { s as static1 } from './static1.js';

var css = {
    \\"entry1\\": \\"entry1\\"
};

console.log(static1, css);
",
  "entry2.js": "
var css = {
    \\"entry2\\": \\"entry2\\"
};

console.log(css);

(function() {
    Promise.all([
    lazyload(\\"./assets/static1.css\\"),
lazyload(\\"./assets/dynamic1.css\\"),
    import('./dynamic1.js')
])
.then((results) => results[results.length - 1]).then(console.log);
}());
",
  "static1.js": "
var css = {
    \\"static1\\": \\"static1\\"
};

console.log(css);

var static1 = \\"static1.js\\";

export { static1 as s };
",
}
`;

exports[`rollup-rewriter should include css for static imports used by a dynamic import ("esm") 1`] = `
Object {
  "assets/dynamic1.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/dynamic1.css */
.dynamic1 {
    color: dynamic1;
}
",
  "assets/entry1.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/entry1.css */
.entry1 {
    color: entry1;
}
",
  "assets/entry2.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/entry2.css */
.entry2 {
    color: entry2;
}
",
  "assets/static1.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/static1.css */
.static1 {
    color: static1;
}
",
  "dynamic1.js": "
import { s as static1 } from './static1.js';

var css = {
    \\"dynamic1\\": \\"dynamic1\\"
};

console.log(static1, css);

var dynamic1 = \\"dynamic1.js\\";

export default dynamic1;
",
  "entry1.js": "
import { s as static1 } from './static1.js';

var css = {
    \\"entry1\\": \\"entry1\\"
};

console.log(static1, css);
",
  "entry2.js": "
var css = {
    \\"entry2\\": \\"entry2\\"
};

console.log(css);

(function() {
    Promise.all([
    lazyload(\\"./assets/static1.css\\"),
lazyload(\\"./assets/dynamic1.css\\"),
    import('./dynamic1.js')
])
.then((results) => results[results.length - 1]).then(console.log);
}());
",
  "static1.js": "
var css = {
    \\"static1\\": \\"static1\\"
};

console.log(css);

var static1 = \\"static1.js\\";

export { static1 as s };
",
}
`;

exports[`rollup-rewriter should include css for static imports used by a dynamic import ("system") 1`] = `
Object {
  "assets/dynamic1.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/dynamic1.css */
.dynamic1 {
    color: dynamic1;
}
",
  "assets/entry1.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/entry1.css */
.entry1 {
    color: entry1;
}
",
  "assets/entry2.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/entry2.css */
.entry2 {
    color: entry2;
}
",
  "assets/static1.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-shared-imports/static1.css */
.static1 {
    color: static1;
}
",
  "dynamic1.js": "
System.register(['./static1.js'], function (exports) {
    'use strict';
    var static1;
    return {
        setters: [function (module) {
            static1 = module.s;
        }],
        execute: function () {

            var css = {
                \\"dynamic1\\": \\"dynamic1\\"
            };

            console.log(static1, css);

            var dynamic1 = exports('default', \\"dynamic1.js\\");

        }
    };
});
",
  "entry1.js": "
System.register(['./static1.js'], function () {
    'use strict';
    var static1;
    return {
        setters: [function (module) {
            static1 = module.s;
        }],
        execute: function () {

            var css = {
                \\"entry1\\": \\"entry1\\"
            };

            console.log(static1, css);

        }
    };
});
",
  "entry2.js": "
System.register([], function (exports, module) {
    'use strict';
    return {
        execute: function () {

            var css = {
                \\"entry2\\": \\"entry2\\"
            };

            console.log(css);

            (function() {
                Promise.all([
    lazyload(\\"./assets/static1.css\\"),
lazyload(\\"./assets/dynamic1.css\\"),
    module.import('./dynamic1.js')
])
.then((results) => results[results.length - 1]).then(console.log);
            }());

        }
    };
});
",
  "static1.js": "
System.register([], function (exports) {
    'use strict';
    return {
        execute: function () {

            var css = {
                \\"static1\\": \\"static1\\"
            };

            console.log(css);

            var static1 = exports('s', \\"static1.js\\");

        }
    };
});
",
}
`;

exports[`rollup-rewriter should log details in verbose mode 1`] = `
Array [
  Array [
    "[rewriter]",
    "Updating",
    "a.js",
  ],
  Array [
    "[rewriter]",
    "Updating",
    "b.js",
  ],
]
`;

exports[`rollup-rewriter should only rewrite when necessary ("amd") 1`] = `
Object {
  "a.js": "
define(['require'], function (require) { 'use strict';

	var css = {
	    \\"a\\": \\"a\\"
	};

	console.log(css);

	new Promise(function (resolve, reject) { Promise.all([
    lazyload(\\"./assets/c.css\\"),
    new Promise(function (resolve, reject) { require(['./c'], resolve, reject) })
])
.then((results) => resolve(results[results.length - 1]))
.catch(reject) }).then(console.log);

});
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/no-asset-imports/a.css */
.a { color: aqua; }
",
  "assets/b.css": "
/* packages/rollup-rewriter/test/specimens/no-asset-imports/b.css */
.b { color: blue; }
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/no-asset-imports/c.css */
.c { color: crimson; }
",
  "b.js": "
define(['require'], function (require) { 'use strict';

	var css = {
	    \\"b\\": \\"b\\"
	};

	console.log(css);

	new Promise(function (resolve, reject) { require(['./d'], resolve, reject) }).then(console.log);

});
",
  "c.js": "
define(['exports'], function (exports) { 'use strict';

	var css = {
	    \\"c\\": \\"c\\"
	};

	console.log(css);

	var c = \\"c\\";

	exports.default = c;

});
",
  "d.js": "
define(['exports'], function (exports) { 'use strict';

	var d = \\"d\\";

	exports.default = d;

});
",
}
`;

exports[`rollup-rewriter should only rewrite when necessary ("es") 1`] = `
Object {
  "a.js": "
var css = {
    \\"a\\": \\"a\\"
};

console.log(css);

Promise.all([
    lazyload(\\"./assets/c.css\\"),
    import('./c.js')
])
.then((results) => results[results.length - 1]).then(console.log);
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/no-asset-imports/a.css */
.a { color: aqua; }
",
  "assets/b.css": "
/* packages/rollup-rewriter/test/specimens/no-asset-imports/b.css */
.b { color: blue; }
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/no-asset-imports/c.css */
.c { color: crimson; }
",
  "b.js": "
var css = {
    \\"b\\": \\"b\\"
};

console.log(css);

import('./d.js').then(console.log);
",
  "c.js": "
var css = {
    \\"c\\": \\"c\\"
};

console.log(css);

var c = \\"c\\";

export default c;
",
  "d.js": "
var d = \\"d\\";

export default d;
",
}
`;

exports[`rollup-rewriter should only rewrite when necessary ("esm") 1`] = `
Object {
  "a.js": "
var css = {
    \\"a\\": \\"a\\"
};

console.log(css);

Promise.all([
    lazyload(\\"./assets/c.css\\"),
    import('./c.js')
])
.then((results) => results[results.length - 1]).then(console.log);
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/no-asset-imports/a.css */
.a { color: aqua; }
",
  "assets/b.css": "
/* packages/rollup-rewriter/test/specimens/no-asset-imports/b.css */
.b { color: blue; }
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/no-asset-imports/c.css */
.c { color: crimson; }
",
  "b.js": "
var css = {
    \\"b\\": \\"b\\"
};

console.log(css);

import('./d.js').then(console.log);
",
  "c.js": "
var css = {
    \\"c\\": \\"c\\"
};

console.log(css);

var c = \\"c\\";

export default c;
",
  "d.js": "
var d = \\"d\\";

export default d;
",
}
`;

exports[`rollup-rewriter should only rewrite when necessary ("system") 1`] = `
Object {
  "a.js": "
System.register([], function (exports, module) {
	'use strict';
	return {
		execute: function () {

			var css = {
			    \\"a\\": \\"a\\"
			};

			console.log(css);

			Promise.all([
    lazyload(\\"./assets/c.css\\"),
    module.import('./c.js')
])
.then((results) => results[results.length - 1]).then(console.log);

		}
	};
});
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/no-asset-imports/a.css */
.a { color: aqua; }
",
  "assets/b.css": "
/* packages/rollup-rewriter/test/specimens/no-asset-imports/b.css */
.b { color: blue; }
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/no-asset-imports/c.css */
.c { color: crimson; }
",
  "b.js": "
System.register([], function (exports, module) {
	'use strict';
	return {
		execute: function () {

			var css = {
			    \\"b\\": \\"b\\"
			};

			console.log(css);

			module.import('./d.js').then(console.log);

		}
	};
});
",
  "c.js": "
System.register([], function (exports) {
	'use strict';
	return {
		execute: function () {

			var css = {
			    \\"c\\": \\"c\\"
			};

			console.log(css);

			var c = exports('default', \\"c\\");

		}
	};
});
",
  "d.js": "
System.register([], function (exports) {
	'use strict';
	return {
		execute: function () {

			var d = exports('default', \\"d\\");

		}
	};
});
",
}
`;

exports[`rollup-rewriter should support loader & loadfn ("amd") 1`] = `
Object {
  "a.js": "
define(['require'], function (require) { 'use strict';
import lazyload from \\"./css.js\\";

    var css = {
        \\"a\\": \\"a\\"
    };

    function a() {
        console.log(css);

        new Promise(function (resolve, reject) { Promise.all([
    lazyload(\\"./assets/c.css\\"),
    new Promise(function (resolve, reject) { require(['./c'], resolve, reject) })
])
.then((results) => resolve(results[results.length - 1]))
.catch(reject) }).then(console.log);
    }

    return a;

});
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/a.css */
.a {
    color: aqua;
}
",
  "assets/b.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/b.css */
.b {
    color: blue;
}
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/c.css */
.c {
    color: cyan;
}
",
  "assets/d.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/d.css */
.d {
    color: darkred;
}
",
  "b.js": "
define(['require'], function (require) { 'use strict';
import lazyload from \\"./css.js\\";

    var css = {
        \\"b\\": \\"b\\"
    };

    function b() {
        console.log(css);

        new Promise(function (resolve, reject) { Promise.all([
    lazyload(\\"./assets/d.css\\"),
    new Promise(function (resolve, reject) { require(['./d'], resolve, reject) })
])
.then((results) => resolve(results[results.length - 1]))
.catch(reject) }).then(console.log);
    }

    return b;

});
",
  "c.js": "
define(['exports'], function (exports) { 'use strict';

    var css = {
        \\"c\\": \\"c\\"
    };

    console.log(css);

    exports.default = css;

});
",
  "d.js": "
define(['exports'], function (exports) { 'use strict';

    var css = {
        \\"d\\": \\"d\\"
    };

    console.log(css);

    exports.default = css;

});
",
}
`;

exports[`rollup-rewriter should support loader & loadfn ("es") 1`] = `
Object {
  "a.js": "
import lazyload from \\"./css.js\\";
var css = {
    \\"a\\": \\"a\\"
};

function a() {
    console.log(css);

    Promise.all([
    lazyload(\\"./assets/c.css\\"),
    import('./c.js')
])
.then((results) => results[results.length - 1]).then(console.log);
}

export default a;
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/a.css */
.a {
    color: aqua;
}
",
  "assets/b.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/b.css */
.b {
    color: blue;
}
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/c.css */
.c {
    color: cyan;
}
",
  "assets/d.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/d.css */
.d {
    color: darkred;
}
",
  "b.js": "
import lazyload from \\"./css.js\\";
var css = {
    \\"b\\": \\"b\\"
};

function b() {
    console.log(css);

    Promise.all([
    lazyload(\\"./assets/d.css\\"),
    import('./d.js')
])
.then((results) => results[results.length - 1]).then(console.log);
}

export default b;
",
  "c.js": "
var css = {
    \\"c\\": \\"c\\"
};

console.log(css);

export default css;
",
  "d.js": "
var css = {
    \\"d\\": \\"d\\"
};

console.log(css);

export default css;
",
}
`;

exports[`rollup-rewriter should support loader & loadfn ("esm") 1`] = `
Object {
  "a.js": "
import lazyload from \\"./css.js\\";
var css = {
    \\"a\\": \\"a\\"
};

function a() {
    console.log(css);

    Promise.all([
    lazyload(\\"./assets/c.css\\"),
    import('./c.js')
])
.then((results) => results[results.length - 1]).then(console.log);
}

export default a;
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/a.css */
.a {
    color: aqua;
}
",
  "assets/b.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/b.css */
.b {
    color: blue;
}
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/c.css */
.c {
    color: cyan;
}
",
  "assets/d.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/d.css */
.d {
    color: darkred;
}
",
  "b.js": "
import lazyload from \\"./css.js\\";
var css = {
    \\"b\\": \\"b\\"
};

function b() {
    console.log(css);

    Promise.all([
    lazyload(\\"./assets/d.css\\"),
    import('./d.js')
])
.then((results) => results[results.length - 1]).then(console.log);
}

export default b;
",
  "c.js": "
var css = {
    \\"c\\": \\"c\\"
};

console.log(css);

export default css;
",
  "d.js": "
var css = {
    \\"d\\": \\"d\\"
};

console.log(css);

export default css;
",
}
`;

exports[`rollup-rewriter should support loader & loadfn ("system") 1`] = `
Object {
  "a.js": "
System.register([], function (exports, module) {
    'use strict';
import lazyload from \\"./css.js\\";
    return {
        execute: function () {

            exports('default', a);

            var css = {
                \\"a\\": \\"a\\"
            };

            function a() {
                console.log(css);

                Promise.all([
    lazyload(\\"./assets/c.css\\"),
    module.import('./c.js')
])
.then((results) => results[results.length - 1]).then(console.log);
            }

        }
    };
});
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/a.css */
.a {
    color: aqua;
}
",
  "assets/b.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/b.css */
.b {
    color: blue;
}
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/c.css */
.c {
    color: cyan;
}
",
  "assets/d.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/d.css */
.d {
    color: darkred;
}
",
  "b.js": "
System.register([], function (exports, module) {
    'use strict';
import lazyload from \\"./css.js\\";
    return {
        execute: function () {

            exports('default', b);

            var css = {
                \\"b\\": \\"b\\"
            };

            function b() {
                console.log(css);

                Promise.all([
    lazyload(\\"./assets/d.css\\"),
    module.import('./d.js')
])
.then((results) => results[results.length - 1]).then(console.log);
            }

        }
    };
});
",
  "c.js": "
System.register([], function (exports) {
    'use strict';
    return {
        execute: function () {

            var css = {
                \\"c\\": \\"c\\"
            };

            console.log(css);
            exports('default', css);

        }
    };
});
",
  "d.js": "
System.register([], function (exports) {
    'use strict';
    return {
        execute: function () {

            var css = {
                \\"d\\": \\"d\\"
            };

            console.log(css);
            exports('default', css);

        }
    };
});
",
}
`;

exports[`rollup-rewriter shouldn't require a loader ("amd") 1`] = `
Object {
  "a.js": "
define(['require'], function (require) { 'use strict';

    var css = {
        \\"a\\": \\"a\\"
    };

    function a() {
        console.log(css);

        new Promise(function (resolve, reject) { Promise.all([
    lazyload(\\"./assets/c.css\\"),
    new Promise(function (resolve, reject) { require(['./c'], resolve, reject) })
])
.then((results) => resolve(results[results.length - 1]))
.catch(reject) }).then(console.log);
    }

    return a;

});
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/a.css */
.a {
    color: aqua;
}
",
  "assets/b.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/b.css */
.b {
    color: blue;
}
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/c.css */
.c {
    color: cyan;
}
",
  "assets/d.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/d.css */
.d {
    color: darkred;
}
",
  "b.js": "
define(['require'], function (require) { 'use strict';

    var css = {
        \\"b\\": \\"b\\"
    };

    function b() {
        console.log(css);

        new Promise(function (resolve, reject) { Promise.all([
    lazyload(\\"./assets/d.css\\"),
    new Promise(function (resolve, reject) { require(['./d'], resolve, reject) })
])
.then((results) => resolve(results[results.length - 1]))
.catch(reject) }).then(console.log);
    }

    return b;

});
",
  "c.js": "
define(['exports'], function (exports) { 'use strict';

    var css = {
        \\"c\\": \\"c\\"
    };

    console.log(css);

    exports.default = css;

});
",
  "d.js": "
define(['exports'], function (exports) { 'use strict';

    var css = {
        \\"d\\": \\"d\\"
    };

    console.log(css);

    exports.default = css;

});
",
}
`;

exports[`rollup-rewriter shouldn't require a loader ("es") 1`] = `
Object {
  "a.js": "
var css = {
    \\"a\\": \\"a\\"
};

function a() {
    console.log(css);

    Promise.all([
    lazyload(\\"./assets/c.css\\"),
    import('./c.js')
])
.then((results) => results[results.length - 1]).then(console.log);
}

export default a;
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/a.css */
.a {
    color: aqua;
}
",
  "assets/b.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/b.css */
.b {
    color: blue;
}
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/c.css */
.c {
    color: cyan;
}
",
  "assets/d.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/d.css */
.d {
    color: darkred;
}
",
  "b.js": "
var css = {
    \\"b\\": \\"b\\"
};

function b() {
    console.log(css);

    Promise.all([
    lazyload(\\"./assets/d.css\\"),
    import('./d.js')
])
.then((results) => results[results.length - 1]).then(console.log);
}

export default b;
",
  "c.js": "
var css = {
    \\"c\\": \\"c\\"
};

console.log(css);

export default css;
",
  "d.js": "
var css = {
    \\"d\\": \\"d\\"
};

console.log(css);

export default css;
",
}
`;

exports[`rollup-rewriter shouldn't require a loader ("esm") 1`] = `
Object {
  "a.js": "
var css = {
    \\"a\\": \\"a\\"
};

function a() {
    console.log(css);

    Promise.all([
    lazyload(\\"./assets/c.css\\"),
    import('./c.js')
])
.then((results) => results[results.length - 1]).then(console.log);
}

export default a;
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/a.css */
.a {
    color: aqua;
}
",
  "assets/b.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/b.css */
.b {
    color: blue;
}
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/c.css */
.c {
    color: cyan;
}
",
  "assets/d.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/d.css */
.d {
    color: darkred;
}
",
  "b.js": "
var css = {
    \\"b\\": \\"b\\"
};

function b() {
    console.log(css);

    Promise.all([
    lazyload(\\"./assets/d.css\\"),
    import('./d.js')
])
.then((results) => results[results.length - 1]).then(console.log);
}

export default b;
",
  "c.js": "
var css = {
    \\"c\\": \\"c\\"
};

console.log(css);

export default css;
",
  "d.js": "
var css = {
    \\"d\\": \\"d\\"
};

console.log(css);

export default css;
",
}
`;

exports[`rollup-rewriter shouldn't require a loader ("system") 1`] = `
Object {
  "a.js": "
System.register([], function (exports, module) {
    'use strict';
    return {
        execute: function () {

            exports('default', a);

            var css = {
                \\"a\\": \\"a\\"
            };

            function a() {
                console.log(css);

                Promise.all([
    lazyload(\\"./assets/c.css\\"),
    module.import('./c.js')
])
.then((results) => results[results.length - 1]).then(console.log);
            }

        }
    };
});
",
  "assets/a.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/a.css */
.a {
    color: aqua;
}
",
  "assets/b.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/b.css */
.b {
    color: blue;
}
",
  "assets/c.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/c.css */
.c {
    color: cyan;
}
",
  "assets/d.css": "
/* packages/rollup-rewriter/test/specimens/dynamic-imports/d.css */
.d {
    color: darkred;
}
",
  "b.js": "
System.register([], function (exports, module) {
    'use strict';
    return {
        execute: function () {

            exports('default', b);

            var css = {
                \\"b\\": \\"b\\"
            };

            function b() {
                console.log(css);

                Promise.all([
    lazyload(\\"./assets/d.css\\"),
    module.import('./d.js')
])
.then((results) => results[results.length - 1]).then(console.log);
            }

        }
    };
});
",
  "c.js": "
System.register([], function (exports) {
    'use strict';
    return {
        execute: function () {

            var css = {
                \\"c\\": \\"c\\"
            };

            console.log(css);
            exports('default', css);

        }
    };
});
",
  "d.js": "
System.register([], function (exports) {
    'use strict';
    return {
        execute: function () {

            var css = {
                \\"d\\": \\"d\\"
            };

            console.log(css);
            exports('default', css);

        }
    };
});
",
}
`;
